--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
 @import "tailwindcss";
 
 @theme {
@@ -10,6 +11,10 @@
 .leaflet-container {
   width: 100%;
   height: 100%;
+}
+
+* {
+  font-family: "Outfit";
 }
 
 body {
